--- a/store/templates/store/contact.html
+++ b/store/templates/store/contact.html
@@ -1,7 +1,7 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
-<section class="card h-100">
+<section class="card">
     <hr class="detail-separator">
     <h1 class="intro-text text-center">Contacts</h1>
     <hr class="detail-separator">
