--- a/store/templates/store/history.html
+++ b/store/templates/store/history.html
@@ -6,15 +6,15 @@
     <hr class="detail-separator">
     <h1 class="intro-text text-center">Historique</h1>
     <hr class="detail-separator">
-    <div class="container px-4 px-lg-5">
+    <div class="container row-cols-xl-2">
         <form class="d-flex" action="{% url 'store:history' %}" method="POST">
         {% csrf_token %}
             {{ form.start_date }}{{ form.media }}
             {{ form.end_date }}{{ form.media }}
-            <input class="btn" type="submit" value="Sélectionner" />
+            <input class="btn btn-outline-dark mt-auto" type="submit" value="Sélectionner" />
         </form>
     </div>
-    <table class="table"><tbody>
+    <table class="table table-striped"><tbody>
             <th>Date</th>
             <th>Ref</th>
             <th>Titre</th>
