--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -96,7 +96,7 @@
         <footer class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white">Copyright &copy; SELIO Website 2021
-                <a class="bi bi-arrow-right-square-fill bg-transparent btn-outline-light" href="{% url 'store:login' %}"></a></p>
+                <!--<a class="bi bi-arrow-right-square-fill bg-transparent btn-outline-light" href="{% url 'store:login' %}"></a></p>-->
             </div>
             
         </footer>
