--- a/store/templates/store/item_modal.html
+++ b/store/templates/store/item_modal.html
@@ -15,6 +15,7 @@
 <div id="popup" class="modal fade modalwindow" role="dialog">
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
+      <div class="modal-header"><h4 class="modal-title" data-dismiss="modal">{{ modal_title }}</h4><button type="button" class="btn btn-close btn-outline-secondary mt-auto closemodal" aria-hidden="true"></button></div>
       <div class="modal-body"></div>
       <div class="modal-footer">
         <button type="button" class="btn btn-dark btn-outline-secondary mt-auto text-white closemodal" data-dismiss="modal">Close</button>
