--- a/store/templates/store/db.html
+++ b/store/templates/store/db.html
@@ -19,7 +19,7 @@
                 <input class="form-control" type="file" value='' name="xls" />
             </div>
             <div class="col-5">
-                <input class="btn btn-dark btn-outline-secondary mt-auto text-white" type="submit" value="Importer">
+                <input class="btn btn-light btn-outline-secondary mt-auto text-body" type="submit" value="Importer">
             </div>
         </form>
         <br />
@@ -33,7 +33,7 @@
                 <input class="form-control" type="file" value='' name="xls" />
             </div>
             <div class="col-5">
-                <input class="btn btn-dark btn-outline-secondary mt-auto text-white" type="submit" value="Importer">
+                <input class="btn btn-light btn-outline-secondary mt-auto text-body" type="submit" value="Importer">
             </div>
         </form>
     </div><br />
