--- a/store/templates/store/item_modal.html
+++ b/store/templates/store/item_modal.html
@@ -18,7 +18,7 @@
       <div class="modal-header"><h4 class="modal-title" data-dismiss="modal">{{ modal_title }}</h4><button type="button" class="btn btn-close btn-outline-secondary mt-auto closemodal" aria-hidden="true"></button></div>
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-dark btn-outline-secondary mt-auto text-white closemodal" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-light btn-outline-secondary mt-auto text-body closemodal" data-dismiss="modal">Fermer</button>
       </div>
     </div>
   </div>
